--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         }
 
         .container {
+            display: flex;
+            align-items: center;
             width: 1200px;
             margin: 0 auto;
+            flex-direction: column;
         }
     </style>
 </head>
